--- a/html/folium/dynamic_map.html
+++ b/html/folium/dynamic_map.html
@@ -4,20 +4,39 @@
     <title>Leaflet Dynamic Marker</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-rotatedmarker/leaflet.rotatedMarker.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-rotatedmarker/leaflet.rotatedMarker.min.js"></script>
+
 </head>
 <body>
     <div id="map" style="width: 100%; height: 100vh;"></div>
     <script>
         var map = L.map('map').setView([40.0, 30.0], 14);
+        var marker;
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '© OpenStreetMap contributors'
         }).addTo(map);
 
-        var marker = L.marker([40.0, 30.0]).addTo(map);
+        function setVehicleIcon(iconPath) {
+            var vehicleIcon = L.icon({
+                iconUrl: iconPath,
+                iconSize: [10, 10],
+                iconAnchor: [25, 25]
+            });
 
-        function updateMarker(lat, lon) {
-            marker.setLatLng([lat, lon]);
+            marker = L.marker([40.0, 30.0], { icon: vehicleIcon }).addTo(map);
+        }
+
+        function updateMarker(lat, lon, angle) {
+            if (marker != undefined) {
+                marker.setLatLng([lat, lon]);
+                marker.setRotationAngle(angle);
+            }
         }
     </script>
 </body>
